@@ -11,7 +11,7 @@ CGI::Wiki::Plugin::Categoriser
 CGI::Wiki::Plugin::Diff (version 0.07 or later)
 CGI::Wiki::Plugin::GeoCache
 CGI::Wiki::Plugin::Locator::UK (version 0.09 or later)
-CGI::Wiki::Plugin::RSS::ModWiki (version 0.02 or later)
+CGI::Wiki::Plugin::RSS::ModWiki (version 0.04 or later)
 CGI::Wiki::Plugin::RSS::Reader (version 1.3 or later)
 Config::Tiny
 Data::Dumper
