@@ -7,6 +7,7 @@
         The "omit help links" preference now actually works.
         Set some pages to non-editable and non-deletable that should have been.
         Recent Changes RSS fixed so "wiki:importance" is set correctly.
+        New "ignore_minor_edits" option for Recent Changes RSS.
 
 0.39    15 September 2004
         Split commit_node out into OpenGuides.pm in preparation for spam filter
